# python-kasa-tkinter

./: .flake8  README.md  kasatk.spec  pyproject.toml  requirements.txt
.github/workflows/: linux.yml  main.yml  test.yml  windows.yml
docs/: linux.md  windows.md
kasatk/: __main__.py  gui.py
